# plgen

./: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml  requirements.txt
configs/: config.yaml
plgen/: ema.py  predictor.py  stable_diffusion.py
plgen/dataset/: aspect_ratio_datamodule.py  datamodule.py  imagecrop_datamodule.py
utils/: make_aesthetic_dataset.py  make_csv.py  make_resize.py  stable_diffusion_pipeline.py  utils.py
